--- a/CPP2/.gitignore
+++ b/CPP2/.gitignore
@@ -1,1 +1,21 @@
+# Mac
 .DS_Store
+
+# PDFs and ZIP (if you don't want to upload them)
+*.pdf
+*.zip
+
+# Python cache
+__pycache__/
+*.pyc
+
+# Model files
+*.keras
+
+# Training outputs
+underwater_segmentation/checkpoints/
+underwater_segmentation/results/
+
+# Virtual environments
+venv/
+venv311/
